[metadata]
name = pycaenhv
description = Pure Python bindngs for CAENHVWrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vasoto/pycaenhv
author = Vassil Verguilov
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Communications
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords = caen, hv, wrapper, voltage
maintainer = Vassil Verguilov
maintainer-email = vassil.verguilov@gmail.com
project_urls =
    Source=https://github.com/vasoto/pycaenhv
    Tracker=https://github.com/vasoto/pycaenhv/issues


[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[options]
packages = find:
tests_require = 
    pytest
    pytest-cov
python_requires = >=3.6


[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx >= 2.0.0
    towncrier >= 18.5.0
    pygments-github-lexers >= 0.0.5
    sphinxcontrib-autoprogram >= 0.1.5
testing =
    pytest >= 4.0.0
    pytest-cov >= 2.5.1
    pytest-mock >= 1.10.0

[bdist_wheel]
universal = 1

[tool:pytest]
addopts =
    --cov=src/pycaenhv
    --tb=short
    -v
filterwarnings=error
norecursedirs = dist docs build .tox .eggs venv virtualenv .git
python_files =
    test_*.py
    *_test.py
    tests.py
minversion = 3.8.2
testpaths = tests/
junit_suite_name = aiogithub_test_suite
junit_family=xunit2