[metadata]
name = pycaenhv
description = Pure Python bindngs for CAENHVWrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vasoto/pycaenhv
author = Vassil Verguilov
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Communications
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords = caen, hv, wrapper, voltage
maintainer = Vassil Verguilov
maintainer_email = vassil.verguilov@gmail.com
project_urls =
    Source=https://github.com/vasoto/pycaenhv
    Tracker=https://github.com/vasoto/pycaenhv/issues
    Documentation=https://vasoto.github.io/pycaenhv/


[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[options]
packages = find:
install_requires =
    toml>=0.10.2
    pydantic>=1.8.2
tests_requires = 
    pytest
    pytest-cov
    pytest-mock
python_requires = >=3.6

[options.entry_points]
console_scripts =
    caenhv = pycaenhv.cli:cli
    hvconfig = pycaenhv.config:main

[options.packages.find]
where = src

[options.extras_require]
cli =
    click
    tabulate
docs =
    mkdocs == 1.2.2
    mkdocs-material == 7.2.2
    mkdocs-material-extensions == 1.0.1
    mkdocstrings == 0.15.2
    PyYAML == 5.4.1
    Pygments== 2.9.0
    ghp-import==2.0.1
    watchdog==2.1.3
    zipp==3.5.0
testing =
    pytest == 6.2.4
    pytest-cov == 2.12.1
    pytest-mock == 3.6.1
    coverage == 5.5

[bdist_wheel]
universal = 1

[tool:pytest]
addopts =
    --cov=src/pycaenhv
    --tb=short
    -v
filterwarnings=error
norecursedirs = dist docs build .tox .eggs venv virtualenv .git
python_files =
    test_*.py
    *_test.py
    tests.py
minversion = 3.8.2
testpaths = tests/
junit_suite_name = pycaenhv_test_suite
junit_family=xunit2